Bug 129095 - FILEOPEN: Chart is not displayed
Summary: FILEOPEN: Chart is not displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, regression
: 131376 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-29 09:45 UTC by Xisco Faulí
Modified: 2020-03-31 09:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Bigger legend size then chart size (111.29 KB, image/png)
2019-11-29 12:46 UTC, Balázs Varga
Details
Screenshot of the colored bugdoc (233.64 KB, image/png)
2019-12-03 08:03 UTC, NISZ LibreOffice Team
Details
Colorized bugdoc (19.43 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-12-03 08:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-29 09:45:45 UTC
Steps to reproduce:
1. Open attachment 75197 [details] from bug 61185

-> The chart is blank

Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: 4e7e0a29836f0c28471a2f5c605976453f6d29ae
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-11-29 09:47:38 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=739ed2c29f49ea5e83bcd1352b2644c2e2d09f7b

author	Balazs Varga <balazs.varga991@gmail.com>	2019-11-21 14:56:43 +0100
committer	László Németh <nemeth@numbertext.org>	2019-11-27 12:02:50 +0100
commit 739ed2c29f49ea5e83bcd1352b2644c2e2d09f7b (patch)
tree 1df3153f300af63631410770638beebf5ea916fc
parent 6bced3c6a1bf8d4652dd6ba75e41b128ce1bfc5c (diff)
tdf#115630 tdf#88922 Chart: fix custom legend position and size

Bisected with: bibisect-linux64-6.5

Adding Cc: to Balazs Varga
Comment 2 Balázs Varga 2019-11-29 12:46:37 UTC
Created attachment 156183 [details]
Bigger legend size then chart size

Dear Xisco,

Is it possible to reproduce the problem from zero? Because I tried, and it was not possible to me.

I think the problem here is in the XML file of the 'calc-bug.ods'. See the attached file: "BiggerLegendThenChart.PNG". The size of the legend is insane  (bigger then the chart). When I opened it with older LibreOffice the chart was already distorted. If you remove the legend from the chart and then put bach, it is OK.
Comment 3 Xisco Faulí 2019-11-29 13:34:05 UTC
(In reply to Balázs Varga from comment #2)
> Created attachment 156183 [details]
> Bigger legend size then chart size
> 
> Dear Xisco,
> 
> Is it possible to reproduce the problem from zero? Because I tried, and it
> was not possible to me.
> 
> I think the problem here is in the XML file of the 'calc-bug.ods'. See the
> attached file: "BiggerLegendThenChart.PNG". The size of the legend is insane
> (bigger then the chart). When I opened it with older LibreOffice the chart
> was already distorted. If you remove the legend from the chart and then put
> bach, it is OK.

Hi Balázs,
I found this issue while investigating another problem, I haven't tried to reproduce it from scratch. Will do it if I find a moment
Comment 4 Julien Nabet 2019-11-29 15:15:55 UTC
On Win10 with master sources updated today, I could reproduce this.

I noticed these logs on console:
warn:xmloff.core:28852:19876:xmloff/source/core/xmlimp.cxx:749: SvXMLImport::startElement: missing context
warn:chart2:28852:19876:chart2/source/view/main/ChartView.cxx:492:  com.sun.star.lang.IndexOutOfBoundsException
warn:legacy.osl:28852:19876:cppuhelper/source/interfacecontainer.cxx:224: OSL_ASSERT: rListener.is()
warn:svl.items:28852:19876:svl/source/items/itempool.cxx:396: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
warn:sfx.control:28852:19876:sfx2/source/control/dispatch.cxx:1216: Childwindow slot missing: 25917
warn:sfx.control:28852:19876:sfx2/source/control/dispatch.cxx:1216: Childwindow slot missing: 25917
warn:legacy.tools:28852:19876:sfx2/source/control/bindings.cxx:1739: No cache for OfficeDispatch!
Comment 5 NISZ LibreOffice Team 2019-12-03 08:03:56 UTC
Created attachment 156261 [details]
Screenshot of the colored bugdoc

There is something really strange happening in this document. 
As the reporter in the other bug stated, this was made in 3.6. 
I tried to add colors to parts of the chart: legend has grey background, chart area yellow and chart background green.
In 3.6 the chart area is large, but the legend is not visible at all (since it is outside the chart area, as noted by Balazs).
The legend started to be visible in 4.0, reducing the chart area size in the process. This is the same as in 6.3.0.
Now after the regression in master the chart area has the same smaller size and the legend is at the same position, but now the chart itself is not drawn.
Comment 6 NISZ LibreOffice Team 2019-12-03 08:04:58 UTC
Created attachment 156262 [details]
Colorized bugdoc
Comment 7 Aron Budea 2020-03-17 06:26:21 UTC
*** Bug 131376 has been marked as a duplicate of this bug. ***
Comment 8 Aron Budea 2020-03-17 06:29:51 UTC
Attachment 158723 [details] from duplicate bug 131376 seems to be a more obvious reproducer, I'd suggest looking at that file.
Comment 9 Commit Notification 2020-03-27 16:17:11 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d5053627e3e625e7b8c37c8785c0c9da31b7b6d

tdf#129095 Chart view: fix missing inner chart area

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2020-03-30 15:00:25 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 11e6582b23b983fde4b04ece5b37c546bcd98a43
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs, thanks for fixing this issue!!
Comment 11 Commit Notification 2020-03-31 09:29:20 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/d8a6757a46898a334a3e8bad8cb77dcd19482939

tdf#129095 Chart view: fix missing inner chart area

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.