tdf#129095 Chart view: fix missing inner chart area

If the inner chart area has RelativeSize, always create
the plot area with that setting.

Regression from commit: 739ed2c29f49ea5e83bcd1352b2644c2e2d09f7b
(tdf#115630 tdf#88922 Chart: fix custom legend position and size)

Change-Id: I9265843c5d0d148c6a392e440b5d3b0c4ccf0e54
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90708
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>